--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,14 @@
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding:0;
-  margin:0;
+body, div, ul, li, p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
   font-family: "Lato", sans-serif;
-  }
+}
 
 .clearfix {
   overflow: auto;
 }
 
-.education-entry,
-.work-entry,
-.project-entry {
+.education-entry, .work-entry, .project-entry {
   padding: 0 5%;
 }
 
@@ -56,14 +44,9 @@ h4 {
   line-height: 17px;
 }
 
-h2,
-h3,
-h4,
-h5 {
-  padding:10px 5%;
-
+h2, h3, h4, h5 {
+  padding: 10px 5%;
 }
-
 
 .date-text {
   font-style: italic;
@@ -79,7 +62,6 @@ h5 {
   color: #999;
   line-height: 16px;
   float: right;
-
 }
 
 p {
@@ -123,19 +105,18 @@ a {
 .gray {
   background-color: #f3f3f3;
   padding-bottom: 10px;
-  clear:both;
+  clear: both;
 }
 
 .dark-gray {
   background-color: #4a4a4a;
-  }
-
+}
 
 /* TODO: Replace with image later */
-#header {
-    background-color: #484848;
-    image: text-align:right;
 
+#header {
+  background-color: #484848;
+  image: text-align: right;
 }
 
 .flex-box {
@@ -200,9 +181,11 @@ span {
   #lets-connect {
     margin-top: 10%;
   }
+
   .biopic {
     width: 150px;
   }
+
   .welcome-message {
     display: none;
   }
@@ -221,8 +204,7 @@ span {
 }
 
 @media only screen and (min-width: 750px) {
-  #skills-h3,
-  .biopic {
+  #skills-h3, .biopic {
     display: block;
   }
 }
